--- a/DolditMan/DolditMan/DolditMan.csproj
+++ b/DolditMan/DolditMan/DolditMan.csproj
@@ -81,6 +81,11 @@
   <ItemGroup>
     <None Include="Resources\dolditBackground.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Full.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
