--- a/DolditMan/DolditMan/DolditMan.csproj
+++ b/DolditMan/DolditMan/DolditMan.csproj
@@ -82,6 +82,9 @@
     <None Include="Resources\dolditBackground.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Brick_Block.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Full.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
