--- a/DolditMan/DolditMan/DolditMan.csproj
+++ b/DolditMan/DolditMan/DolditMan.csproj
@@ -89,6 +89,9 @@
     <Content Include="Brick_Block.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="cartman.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Full.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
